gts-macros/tests/compile_fail/base_parent_mismatch.stderr
error[E0080]: evaluation panicked: struct_to_gts_schema: Base struct 'BaseEventV1' schema ID must match parent segment 'gts.x.wrong.parent.v1~' from schema_id
  --> tests/compile_fail/base_parent_mismatch.rs:25:1
   |
25 | / #[struct_to_gts_schema(
26 | |     dir_path = "schemas",
27 | |     base = BaseEventV1,
28 | |     schema_id = "gts.x.wrong.parent.v1~x.core.audit.event.v1~",
29 | |     description = "This should fail",
30 | |     properties = "user_id"
31 | | )]
   | |__^ evaluation of `_` failed here
